--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -1,33 +1,35 @@
 {
-	"name": "@sim-cli/core",
-	"version": "1.0.1",
-	"description": "sim-cli/core",
-	"author": "llf137224350 <137224350@qq.com>",
-	"homepage": "",
-	"license": "ISC",
-	"main": "",
-	"bin": {
-		"sim-cli": "./bin/index.js"
-	},
-	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
-	},
-	"files": [
-		"lib"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://git.code.tencent.com/llf137224350/sim-cli.git"
-	},
-	"scripts": {
-		"test": "echo \"Error: run tests from root\" && exit 1"
-	},
-	"dependencies": {
-		"@sim-cli/utils": "file:../../utils/utils"
-	},
-	"gitHead": "f85271c8ce6f61226b4dae3a35c4c2ff0d610915",
-	"publishConfig": {
-		"access": "public"
-	}
+  "name": "@sim-cli/core",
+  "version": "1.0.1",
+  "description": "sim-cli/core",
+  "author": "llf137224350 <137224350@qq.com>",
+  "homepage": "",
+  "license": "ISC",
+  "main": "",
+  "bin": {
+    "sim-cli": "./bin/index.js"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://git.code.tencent.com/llf137224350/sim-cli.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "@sim-cli/utils": "file:../../utils/utils",
+    "import-local": "^3.0.2",
+    "npmlog": "^4.1.2"
+  },
+  "gitHead": "f85271c8ce6f61226b4dae3a35c4c2ff0d610915",
+  "publishConfig": {
+    "access": "public"
+  }
 }
