--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "@sim-cli/log": "file:../../utils/log",
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "import-local": "^3.0.2",
+    "minimist": "^1.2.5",
     "path-exists": "^4.0.0",
     "root-check": "^1.0.0",
     "semver": "^7.3.4",
