增加获取npm包信息

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@sim-cli/log": "file:../../utils/log",
+    "@sim-cli/get-npm-info": "file:../../utils/get-npm-info",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "import-local": "^3.0.2",
