--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -19,5 +19,10 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "semver": "^7.3.4",
+    "url-join": "^4.0.1"
   }
 }
