--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -24,9 +24,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@sim-cli/log": "file:../../utils/log",
     "@sim-cli/get-npm-info": "file:../../utils/get-npm-info",
+    "@sim-cli/log": "file:../../utils/log",
+    "@sim-cli/init": "file:../../commands/init",
     "colors": "^1.4.0",
+    "commander": "^6.2.1",
     "dotenv": "^8.2.0",
     "import-local": "^3.0.2",
     "minimist": "^1.2.5",
