--- a/utils/format-path/package.json
+++ b/utils/format-path/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sim-cli/exec",
+  "name": "@sim-cli/format-path",
   "version": "1.0.2",
-  "description": "exec",
+  "description": "@sim-cli format-path",
   "author": "llf137224350 <137224350@qq.com>",
   "homepage": "",
   "license": "ISC",
@@ -18,9 +18,5 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "dependencies": {
-    "@sim-cli/package": "file:../../models/package",
-    "@sim-cli/log": "file:../../utils/log"
   }
 }
