增加了动态加载代码执行、安装package和更新package

--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@sim-cli/package": "file:../../models/package",
-    "@sim-cli/log": "file:../../utils/log"
+    "@sim-cli/log": "file:../../utils/log",
+    "colors": "^1.4.0"
   }
 }
