--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@sim-cli/package": "file:../../models/package",
     "@sim-cli/log": "file:../../utils/log",
+    "@sim-cli/utils": "file:../../utils/utils",
     "colors": "^1.4.0"
   }
 }
