--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://git.code.tencent.com/llf137224350/sim-cli.git"
+    "url": "https://github.com/llf137224350/sim-cli.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
